Optimize for mobile and center About section content

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section class="banner">
             <div class="banner-slider">
                 <div class="banner-slide">
-                    <img src="images/heroimage3.webp" alt="Luxury villa with infinity pool">
+                    <img src="images/Villaheroimage.jpg" alt="Luxury villa with infinity pool">
                 </div>
             </div>
             <div class="banner-main">
@@ -68,9 +68,6 @@
                             <div class="subheading">
                                 Unlock the True Potential of your<br>Coastal Property Investment
                             </div>
-                        </div>
-                        <div class="banner-image">
-                            <img src="images/hero-content.png" alt="Mediterranean villa">
                         </div>
                     </div>
                 </div>
