--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section class="banner">
             <div class="banner-slider">
                 <div class="banner-slide">
-                    <img src="images/Villaheroimage.jpg" alt="Luxury villa with infinity pool">
+                    <img src="images/Villaheroimage.webp" alt="Luxury villa with infinity pool">
                 </div>
             </div>
             <div class="banner-main">
