Optimize copy and finalize contact form with Formspree

--- a/index-hr.html
+++ b/index-hr.html
@@ -104,7 +104,7 @@
                         </h2>
                         <div class="subheading">
                             <div class="text-wrap">
-                                <div class="text-inner">Dubrovnik i širi Jadran</div>
+                                <div class="text-inner">Dubrovnik i okolica</div>
                             </div>
                         </div>
                         <div class="about-team-text mob-hidden">
@@ -132,11 +132,11 @@
                 <!-- Slogan / Manifesto -->
                 <div class="slogan">
                     <div class="slogan-text">
-                        <span class="slogan-line"><span class="slogan-cover">Bez najma, bez conciergea—samo </span>Bez
-                            najma, bez conciergea—samo </span>
-                        <span class="slogan-line highlight"><span class="slogan-cover">Tehnička briga na razini imanja
-                            </span>Tehnička briga na razini imanja </span>
-                        <span class="slogan-line"><span class="slogan-cover">i nadzor.</span>i nadzor.</span>
+                        <span class="slogan-line highlight"><span class="slogan-cover">Izniman tehnički nadzor.
+                            </span>Izniman tehnički nadzor. </span>
+                        <span class="slogan-line"><span class="slogan-cover">Definiran detaljima i
+                                izvrsnošću.</span>Definiran
+                            detaljima i izvrsnošću.</span>
                     </div>
                 </div>
 
@@ -177,7 +177,7 @@
                                 <p class="service-subtitle">Kemija vode, filtracija, grijanje i istraga curenja.</p>
                             </div>
                             <div class="service-card">
-                                <h3 class="service-title">MEP Usluge</h3>
+                                <h3 class="service-title">Ključni sustavi</h3>
                                 <p class="service-subtitle">HVAC održavanje, vodoinstalacije i trijaža električnih
                                     kvarova.</p>
                             </div>
@@ -248,7 +248,11 @@
                     <div class="key-wrap">
                         <div class="key"></div>
                     </div>
-                    <form id="inquiryForm">
+                    <form id="inquiryForm" action="https://formspree.io/f/xvzbbzez" method="POST">
+                        <!-- Honeypot for spam protection -->
+                        <input type="text" name="_gotcha" style="display:none">
+                        <!-- Subject line for email -->
+                        <input type="hidden" name="_subject" value="New Inquiry from Villa Care Collective (HR)">
                         <div class="input-box">
                             <span class="input-item">
                                 <input type="text" name="name" placeholder="ime i prezime" required>
