--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         </h2>
                         <div class="subheading">
                             <div class="text-wrap">
-                                <div class="text-inner">Dubrovnik & Wider Adriatic</div>
+                                <div class="text-inner">Dubrovnik & Surrounding Area</div>
                             </div>
                         </div>
                         <div class="about-team-text mob-hidden">
@@ -124,11 +124,11 @@
                 <!-- Slogan / Manifesto -->
                 <div class="slogan">
                     <div class="slogan-text">
-                        <span class="slogan-line"><span class="slogan-cover">No rentals, no concierge—just </span>No
-                            rentals, no concierge—just </span>
-                        <span class="slogan-line highlight"><span class="slogan-cover">Estate-Grade Technical Care
-                            </span>Estate-Grade Technical Care </span>
-                        <span class="slogan-line"><span class="slogan-cover">and oversight.</span>and oversight.</span>
+                        <span class="slogan-line highlight"><span class="slogan-cover">Exceptional Technical Oversight.
+                            </span>Exceptional Technical Oversight. </span>
+                        <span class="slogan-line"><span class="slogan-cover">Defined by Detail and
+                                Distinction.</span>Defined
+                            by Detail and Distinction.</span>
                     </div>
                 </div>
 
@@ -171,7 +171,7 @@
                                 </p>
                             </div>
                             <div class="service-card">
-                                <h3 class="service-title">MEP Services</h3>
+                                <h3 class="service-title">Core Systems</h3>
                                 <p class="service-subtitle">HVAC tuning, plumbing inspections & electrical fault triage.
                                 </p>
                             </div>
@@ -242,7 +242,11 @@
                     <div class="key-wrap">
                         <div class="key"></div>
                     </div>
-                    <form id="inquiryForm">
+                    <form id="inquiryForm" action="https://formspree.io/f/xvzbbzez" method="POST">
+                        <!-- Honeypot for spam protection -->
+                        <input type="text" name="_gotcha" style="display:none">
+                        <!-- Subject line for email -->
+                        <input type="hidden" name="_subject" value="New Inquiry from Villa Care Collective (EN)">
                         <div class="input-box">
                             <span class="input-item">
                                 <input type="text" name="name" placeholder="full name" required>
