Revise Croatian copy with 12 specific updates

--- a/index-hr.html
+++ b/index-hr.html
@@ -80,7 +80,7 @@
                             </h1>
                             <div class="banner-est">Est. 2024</div>
                             <div class="subheading">
-                                Otključajte puni potencijal vaše<br>obalne nekretnine
+                                Iskoristite sve prednosti vaše<br>obalne nekretnine
                             </div>
                         </div>
                     </div>
@@ -108,9 +108,9 @@
                             </div>
                         </div>
                         <div class="about-team-text mob-hidden">
-                            Pružamo tehničko održavanje vila i bazena osmišljeno za obalne domove u Dubrovniku. Naš rad
-                            pokriva sustave koji su najvažniji: bazenska tehnika, kvaliteta vode, HVAC i provjere
-                            ovojnice zgrade.
+                            Pružamo tehničko održavanje vila i bazena osmišljeno za obalne domove u Dubrovniku. Brinemo
+                            se za sustave koji su od ključne važnosti: bazensku tehniku, kvalitetu vode, klimatizaciju
+                            (HVAC) te pregled vanjske konstrukcije objekta.
                         </div>
                     </div>
                     <div class="about-team-col img-float" data-speed="0.05">
@@ -119,11 +119,11 @@
                     <div class="about-team-col">
                         <div class="about-team-text">
                             <span class="mob-hide">Pružamo tehničko održavanje vila i bazena osmišljeno za obalne domove
-                                u Dubrovniku. Naš rad pokriva sustave koji su najvažniji: bazenska tehnika, kvaliteta
-                                vode, HVAC i provjere ovojnice zgrade.</span>
-                            Poslujemo sa strukturiranim inspekcijama i transparentnim izvještavanjem—kako bi vaš dom
-                            ostao zaštićen, učinkovit i uvijek spreman. Naš iskusni tim ima desetljeća iskustva u
-                            osiguravanju dosljedno visokih standarda za zahtjevne vlasnike nekretnina.
+                                u Dubrovniku. Brinemo se za sustave koji su od ključne važnosti: bazensku tehniku,
+                                kvalitetu vode, klimatizaciju (HVAC) te pregled vanjske konstrukcije objekta.</span>
+                            Provodimo sustavne preglede i jasno izvješćujemo o stanju—kako bi vaš dom ostao zaštićen,
+                            učinkovit i uvijek spreman. Naš iskusni tim ima desetljeća iskustva u osiguravanju dosljedno
+                            visokih standarda za zahtjevne vlasnike nekretnina.
                         </div>
                         <a href="#services" class="link-flash">Saznajte više</a>
                     </div>
@@ -132,11 +132,11 @@
                 <!-- Slogan / Manifesto -->
                 <div class="slogan">
                     <div class="slogan-text">
-                        <span class="slogan-line highlight"><span class="slogan-cover">Izniman tehnički nadzor.
-                            </span>Izniman tehnički nadzor. </span>
-                        <span class="slogan-line"><span class="slogan-cover">Definiran detaljima i
-                                izvrsnošću.</span>Definiran
-                            detaljima i izvrsnošću.</span>
+                        <span class="slogan-line highlight"><span class="slogan-cover">Izvrsna tehnička skrb.
+                            </span>Izvrsna tehnička skrb. </span>
+                        <span class="slogan-line"><span class="slogan-cover">Utemeljena na pažnji prema detaljima i
+                                visokim standardima.</span>Utemeljena na pažnji prema detaljima i visokim
+                            standardima.</span>
                     </div>
                 </div>
 
@@ -151,12 +151,12 @@
                         <div class="info-top reveal">
                             <h2>
                                 <div class="text-wrap">
-                                    <div class="text-inner">Stupovi usluge</div>
+                                    <div class="text-inner">Naša područja djelovanja</div>
                                 </div>
                             </h2>
                             <div class="subheading">
                                 <div class="text-wrap">
-                                    <div class="text-inner">Tehničko održavanje s dokazanom izvrsnošću</div>
+                                    <div class="text-inner">Tehničko održavanje s dokazanim standardima izvrsnosti</div>
                                 </div>
                             </div>
                         </div>
@@ -178,11 +178,11 @@
                             </div>
                             <div class="service-card">
                                 <h3 class="service-title">Ključni sustavi</h3>
-                                <p class="service-subtitle">HVAC održavanje, vodoinstalacije i trijaža električnih
-                                    kvarova.</p>
+                                <p class="service-subtitle">HVAC održavanje, vodoinstalacije i dijagnostika te
+                                    otklanjanje električnih kvarova.</p>
                             </div>
                             <div class="service-card">
-                                <h3 class="service-title">Ovojnica zgrade</h3>
+                                <h3 class="service-title">Zaštita pročelja i krova</h3>
                                 <p class="service-subtitle">Prodor vode s krova/terase, odvodnja i nadzor stanja kamena.
                                 </p>
                             </div>
@@ -207,12 +207,12 @@
                             <div class="invest-info-top reveal">
                                 <h2>
                                     <div class="text-wrap">
-                                        <div class="text-inner">Mentalitet upravljanja</div>
+                                        <div class="text-inner">Naš pristup upravljanju</div>
                                     </div>
                                 </h2>
                                 <div class="subheading">
                                     <div class="text-wrap">
-                                        <div class="text-inner">Pouzdanost. Prevencija. Diskretno izvršenje.</div>
+                                        <div class="text-inner">Pouzdanost. Prevencija. Diskrecija.</div>
                                     </div>
                                 </div>
                             </div>
@@ -222,10 +222,10 @@
                                 </div>
                                 <div class="invest-info-content">
                                     <div class="invest-info-text">
-                                        Potrebno je strpljenje i rigorozna dubinska analiza za održavanje ovih izuzetnih
-                                        nekretnina. Nećemo žuriti niti kompromitirati naše standarde. Naš tim izravno
-                                        ulaže u svaki odnos s nekretninom, tako da vlasnici mogu biti sigurni u
-                                        zajednički interes u održavanju vrijednosti i funkcionalnosti njihove imovine.
+                                        Održavanje ovakvih nekretnina zahtijeva strpljenje i temeljitu, detaljnu
+                                        analizu. Nećemo žuriti niti kompromitirati naše standarde. Naš tim osobno se
+                                        posvećuje svakoj nekretnini kojom upravljamo, kako bi vlasnici bili sigurni da
+                                        dijelimo isti interes u očuvanju vrijednosti i funkcionalnosti njihove imovine.
                                     </div>
                                     <a href="#contact" class="link-flash">Zatražite konzultacije</a>
                                 </div>
@@ -288,9 +288,9 @@
                     </ul>
                 </div>
                 <div class="footer-text">
-                    <p>Specijalizirani za tehničko održavanje obalnih domova u Dubrovačko-neretvanskoj županiji. Naše
-                        usluge uključuju sustave bazena, MEP, zaštitu ovojnice zgrade i sveobuhvatno upravljanje
-                        imovinom za zahtjevne vlasnike.</p>
+                    <p>Specijalizirani za tehničko održavanje vila i kuća na obali u Dubrovačko-neretvanskoj županiji.
+                        Naše usluge uključuju sustave bazena, MEP, zaštitu vanjske konstrukcije objekta i sveobuhvatno
+                        upravljanje nekretninom za zahtjevne vlasnike.</p>
                 </div>
                 <div class="footer-bottom">
                     <div class="footer-copy">
