Final Croatian copy polish and mobile text optimization

--- a/index-hr.html
+++ b/index-hr.html
@@ -80,7 +80,7 @@
                             </h1>
                             <div class="banner-est">Est. 2024</div>
                             <div class="subheading">
-                                Iskoristite sve prednosti vaše<br>obalne nekretnine
+                                Iskoristite sve prednosti vaše<br>luksuzne nekretnine
                             </div>
                         </div>
                     </div>
@@ -108,9 +108,9 @@
                             </div>
                         </div>
                         <div class="about-team-text mob-hidden">
-                            Pružamo tehničko održavanje vila i bazena osmišljeno za obalne domove u Dubrovniku. Brinemo
-                            se za sustave koji su od ključne važnosti: bazensku tehniku, kvalitetu vode, klimatizaciju
-                            (HVAC) te pregled vanjske konstrukcije objekta.
+                            Pružamo tehničko održavanje vila i bazena u Dubrovniku i okolici. Brinemo se za sustave koji
+                            su od ključne važnosti: bazensku tehniku, kvalitetu vode, klimatizaciju (HVAC) te sve
+                            elemente vanjske i unutarnje elemente objekta.
                         </div>
                     </div>
                     <div class="about-team-col img-float" data-speed="0.05">
@@ -118,9 +118,9 @@
                     </div>
                     <div class="about-team-col">
                         <div class="about-team-text">
-                            <span class="mob-hide">Pružamo tehničko održavanje vila i bazena osmišljeno za obalne domove
-                                u Dubrovniku. Brinemo se za sustave koji su od ključne važnosti: bazensku tehniku,
-                                kvalitetu vode, klimatizaciju (HVAC) te pregled vanjske konstrukcije objekta.</span>
+                            <span class="mob-hide">Pružamo tehničko održavanje vila i bazena u Dubrovniku i okolici.
+                                Brinemo se za sustave koji su od ključne važnosti: bazensku tehniku, kvalitetu vode,
+                                klimatizaciju (HVAC) te sve elemente vanjske i unutarnje elemente objekta.</span>
                             Provodimo sustavne preglede i jasno izvješćujemo o stanju—kako bi vaš dom ostao zaštićen,
                             učinkovit i uvijek spreman. Naš iskusni tim ima desetljeća iskustva u osiguravanju dosljedno
                             visokih standarda za zahtjevne vlasnike nekretnina.
