Optimize slogan layout, mobile animation, and update Croatian copy

--- a/index-hr.html
+++ b/index-hr.html
@@ -132,8 +132,8 @@
                 <!-- Slogan / Manifesto -->
                 <div class="slogan">
                     <div class="slogan-text">
-                        <span class="slogan-line highlight"><span class="slogan-cover">Izvrsna tehnička skrb.
-                            </span>Izvrsna tehnička skrb. </span>
+                        <span class="slogan-line highlight"><span class="slogan-cover">Izvrsna tehnička
+                                skrb.</span>Izvrsna tehnička skrb.</span><br>
                         <span class="slogan-line"><span class="slogan-cover">Utemeljena na pažnji prema detaljima i
                                 visokim standardima.</span>Utemeljena na pažnji prema detaljima i visokim
                             standardima.</span>
@@ -151,7 +151,7 @@
                         <div class="info-top reveal">
                             <h2>
                                 <div class="text-wrap">
-                                    <div class="text-inner">Naša područja djelovanja</div>
+                                    <div class="text-inner">Naše Usluge</div>
                                 </div>
                             </h2>
                             <div class="subheading">
