--- a/index.html
+++ b/index.html
@@ -124,11 +124,10 @@
                 <!-- Slogan / Manifesto -->
                 <div class="slogan">
                     <div class="slogan-text">
-                        <span class="slogan-line highlight"><span class="slogan-cover">Exceptional Technical Oversight.
-                            </span>Exceptional Technical Oversight. </span>
+                        <span class="slogan-line highlight"><span class="slogan-cover">Exceptional Technical
+                                Oversight.</span>Exceptional Technical Oversight.</span><br>
                         <span class="slogan-line"><span class="slogan-cover">Defined by Detail and
-                                Distinction.</span>Defined
-                            by Detail and Distinction.</span>
+                                Distinction.</span>Defined by Detail and Distinction.</span>
                     </div>
                 </div>
 
