Add generated brochure images, fix image paths, update CTA links, center slogan

--- a/Brochure/index.html
+++ b/Brochure/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,13 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Jost:wght@300;400;500&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Jost:wght@300;400;500&display=swap"
+        rel="stylesheet">
     <!-- Styles -->
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div id="wrapper">
         <!-- Header -->
@@ -25,26 +29,44 @@
         <!-- Intro Section -->
         <section class="intro">
             <div class="holder">
-                <h1>Technical Villa & Pool Maintenance</h1>
-                <div class="subheading">Dubrovnik & Wider Adriatic</div>
+                <h1>Villa Care<br>Collective</h1>
+                <div class="subheading">Unlock the True Potential of your Coastal Property Investment</div>
                 <div class="intro-text">
-                    <p>We provide technical villa and pool maintenance designed for coastal homes in Dubrovnik and the wider Adriatic—focused on reliability, prevention, and discreet execution. Our work covers the systems that matter most: pool plant and water quality, HVAC, plumbing, electrical fault triage, drainage, building-envelope checks, and salt-air protection.</p>
-                    <p>We operate with a stewardship mindset: structured inspections, a planned maintenance calendar, clear prioritisation, and transparent reporting—so your home stays protected, efficient, and always ready. When issues arise, we respond quickly, isolate risk, and coordinate the right specialists, with quality control from start to finish. No rentals, no concierge—just estate-grade technical care and oversight.</p>
+                    <p>We provide technical villa and pool maintenance designed for coastal homes in Dubrovnik. Our work
+                        covers the systems that matter most: pool plant, water quality, HVAC, and building-envelope
+                        checks.</p>
+                    <p>We operate with structured inspections and transparent reporting—so your home stays protected,
+                        efficient, and always ready. Our seasoned team has decades of experience ensuring consistently
+                        high standards for discerning property owners.</p>
                 </div>
+            </div>
+        </section>
+
+        <!-- Slogan -->
+        <section class="slogan-section">
+            <div class="holder">
+                <div class="slogan-text">Exceptional Technical Oversight.<br>Defined by Detail and Distinction.</div>
             </div>
         </section>
 
         <!-- Services Section -->
         <section class="services">
             <div class="holder">
-                
+                <div class="services-header">
+                    <h2>Service Pillars</h2>
+                    <div class="subheading">Technical Maintenance with Proven Excellence</div>
+                    <p class="services-intro">We respond quickly, isolate risk, and coordinate specialists with quality
+                        control from start to finish. Our comprehensive service covers every aspect of technical villa
+                        maintenance.</p>
+                </div>
+
                 <!-- Service 1 -->
                 <div class="service-row">
                     <div class="service-img">
                         <img src="images/pool-systems.jpg" alt="Pool Systems Maintenance">
                     </div>
                     <div class="service-content">
-                        <h2>1) Pool Systems Maintenance</h2>
+                        <h2>1) Pool Systems</h2>
                         <ul>
                             <li>Water chemistry testing & balancing</li>
                             <li>Filtration/circulation servicing (filters, pumps, valves, flow/pressure)</li>
@@ -58,10 +80,10 @@
                 <!-- Service 2 -->
                 <div class="service-row reverse">
                     <div class="service-img">
-                        <img src="images/mep-systems.jpg" alt="Mechanical, Electrical & Plumbing">
+                        <img src="images/mep-systems.jpg" alt="Core Systems">
                     </div>
                     <div class="service-content">
-                        <h2>2) Mechanical, Electrical & Plumbing</h2>
+                        <h2>2) Core Systems</h2>
                         <ul>
                             <li>HVAC servicing and performance tuning (filters, drains, airflow, calibration)</li>
                             <li>Plumbing inspections and leak prevention (wet areas, valves, pressure)</li>
@@ -77,7 +99,7 @@
                         <img src="images/building-envelope.jpg" alt="Building Envelope & Exterior">
                     </div>
                     <div class="service-content">
-                        <h2>3) Building Envelope, Drainage & Exterior Technical Care</h2>
+                        <h2>3) Building Envelope</h2>
                         <ul>
                             <li>Roof/terrace water-ingress inspections and prevention</li>
                             <li>Gutter, drain, stormwater flow checks and clearing</li>
@@ -96,7 +118,8 @@
                         <h2>4) Coastal Protection</h2>
                         <ul>
                             <li>Salt-air corrosion control and marine-grade recommendations</li>
-                            <li>Humidity monitoring and mould-prevention actions (ventilation/dehumidifier strategy)</li>
+                            <li>Humidity monitoring and mould-prevention actions (ventilation/dehumidifier strategy)
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -107,7 +130,7 @@
                         <img src="images/safety-response.jpg" alt="Safety & Readiness">
                     </div>
                     <div class="service-content">
-                        <h2>5) Safety, Readiness & Emergency Response</h2>
+                        <h2>5) Safety & Readiness</h2>
                         <ul>
                             <li>Fire safety device checks (and certified provider coordination where required)</li>
                             <li>Water shutoff/isolation testing and emergency stabilisation</li>
@@ -122,7 +145,7 @@
                         <img src="images/stewardship.jpg" alt="Stewardship & Oversight">
                     </div>
                     <div class="service-content">
-                        <h2>6) Stewardship & Oversight</h2>
+                        <h2>6) Stewardship</h2>
                         <ul>
                             <li>Planned preventive maintenance programme (weekly/monthly/seasonal)</li>
                             <li>Structured technical inspections with photo logs and measured notes</li>
@@ -136,15 +159,31 @@
             </div>
         </section>
 
+        <!-- Stewardship Mindset -->
+        <section class="stewardship-section">
+            <div class="holder">
+                <h2>The Stewardship Mindset</h2>
+                <div class="subheading">Reliability. Prevention. Discreet Execution.</div>
+                <p>It will take patience and rigorous due diligence to maintain these exceptional properties. We will
+                    not be rushed or compromise our standards. Our team invests directly in every property relationship,
+                    so owners can be assured of commonality of interest in maintaining their property's value and
+                    functionality.</p>
+            </div>
+        </section>
+
         <!-- Footer -->
         <footer class="footer">
             <div class="holder">
                 <div class="footer-logo">Villa Care Collective</div>
                 <div class="contact-info">
-                    Estate-Grade Technical Care in Dubrovnik
+                    Secure Your Property's Future
                 </div>
+                <p class="footer-desc">Specializing in technical maintenance for coastal homes in Dubrovnik-Neretva
+                    County. Our services include pool systems, MEP, building envelope protection, and comprehensive
+                    property stewardship for discerning property owners.</p>
             </div>
         </footer>
     </div>
 </body>
+
 </html>
