--- a/Brochure/slides.html
+++ b/Brochure/slides.html
@@ -21,13 +21,14 @@
     <div class="slide cover">
         <div class="holder">
             <div class="logo">Villa Care Collective</div>
-            <h1>Technical Villa & Pool Maintenance</h1>
-            <div class="subheading">Dubrovnik & Wider Adriatic</div>
+            <h1>Villa Care<br>Collective</h1>
+            <div class="subheading">Unlock the True Potential of your Coastal Property Investment</div>
             <div class="intro-box">
-                <p>We provide technical villa and pool maintenance designed for coastal homes in Dubrovnik and the wider
-                    Adriatic—focused on reliability, prevention, and discreet execution.</p>
+                <p>We provide technical villa and pool maintenance designed for coastal homes in Dubrovnik. Our work
+                    covers the systems that matter most: pool plant, water quality, HVAC, and building-envelope checks.
+                </p>
                 <div class="divider"></div>
-                <p>No rentals, no concierge—just estate-grade technical care and oversight.</p>
+                <p>Exceptional Technical Oversight.<br>Defined by Detail and Distinction.</p>
             </div>
         </div>
     </div>
@@ -35,33 +36,33 @@
     <!-- Slide 2: Pool Systems -->
     <div class="slide service-slide reverse">
         <div class="slide-image">
-            <img src="images/pool-systems.jpg" alt="Pool Systems">
+            <img src="../images/PoolSystems.png" alt="Pool Systems">
         </div>
         <div class="slide-content">
             <div class="slide-num">01</div>
-            <h2>Pool Systems Maintenance</h2>
+            <h2>Pool Systems</h2>
             <ul>
                 <li>Water chemistry testing & balancing</li>
                 <li>Filtration/circulation servicing (filters, pumps, valves, flow/pressure)</li>
-                <li>Equipment servicing (heaters/heat pumps, chlorination/dosing systems)</li>
+                <li>Equipment servicing (heaters/heat pumps, chlorination/dosing systems, controls)</li>
                 <li>Leak investigation and performance troubleshooting</li>
                 <li>Seasonal opening and winterisation</li>
             </ul>
         </div>
     </div>
 
-    <!-- Slide 3: MEP -->
+    <!-- Slide 3: Core Systems -->
     <div class="slide service-slide">
         <div class="slide-image">
-            <img src="images/mep-systems.jpg" alt="MEP Services">
+            <img src="../images/core_systems.png" alt="Core Systems">
         </div>
         <div class="slide-content">
             <div class="slide-num">02</div>
-            <h2>Mechanical, Electrical & Plumbing</h2>
+            <h2>Core Systems</h2>
             <ul>
-                <li>HVAC servicing and performance tuning (filters, drains, airflow)</li>
+                <li>HVAC servicing and performance tuning (filters, drains, airflow, calibration)</li>
                 <li>Plumbing inspections and leak prevention (wet areas, valves, pressure)</li>
-                <li>Hot water system maintenance (boilers/heat pumps/cylinders)</li>
+                <li>Hot water system maintenance (boilers/heat pumps/cylinders, descaling as needed)</li>
                 <li>Electrical fault triage + coordination of certified compliance work</li>
             </ul>
         </div>
@@ -70,15 +71,15 @@
     <!-- Slide 4: Building Envelope -->
     <div class="slide service-slide reverse">
         <div class="slide-image">
-            <img src="images/building-envelope.jpg" alt="Building Envelope">
+            <img src="../images/building_envelope.png" alt="Building Envelope">
         </div>
         <div class="slide-content">
             <div class="slide-num">03</div>
-            <h2>Building Envelope & Exterior</h2>
+            <h2>Building Envelope</h2>
             <ul>
                 <li>Roof/terrace water-ingress inspections and prevention</li>
                 <li>Gutter, drain, stormwater flow checks and clearing</li>
-                <li>Door/window hardware, seals, and corrosion-sensitive components</li>
+                <li>Door/window hardware, seals, and corrosion-sensitive components upkeep</li>
                 <li>Facade/stone condition monitoring and specialist coordination</li>
             </ul>
         </div>
@@ -87,29 +88,28 @@
     <!-- Slide 5: Coastal Protection -->
     <div class="slide service-slide">
         <div class="slide-image">
-            <img src="images/coastal-protection.jpg" alt="Coastal Protection">
+            <img src="../images/coastal_protection.png" alt="Coastal Protection">
         </div>
         <div class="slide-content">
             <div class="slide-num">04</div>
             <h2>Coastal Protection</h2>
             <ul>
                 <li>Salt-air corrosion control and marine-grade recommendations</li>
-                <li>Humidity monitoring and mould-prevention actions (ventilation strategy)</li>
-                <li>Material selection advice for coastal longevity</li>
+                <li>Humidity monitoring and mould-prevention actions (ventilation/dehumidifier strategy)</li>
             </ul>
         </div>
     </div>
 
-    <!-- Slide 6: Safety -->
+    <!-- Slide 6: Safety & Readiness -->
     <div class="slide service-slide reverse">
         <div class="slide-image">
-            <img src="images/safety-response.jpg" alt="Safety & Readiness">
+            <img src="../images/safety_readiness.png" alt="Safety & Readiness">
         </div>
         <div class="slide-content">
             <div class="slide-num">05</div>
-            <h2>Safety, Readiness & Emergency Response</h2>
+            <h2>Safety & Readiness</h2>
             <ul>
-                <li>Fire safety device checks (and certified provider coordination)</li>
+                <li>Fire safety device checks (and certified provider coordination where required)</li>
                 <li>Water shutoff/isolation testing and emergency stabilisation</li>
                 <li>Rapid response call-outs with documented actions</li>
             </ul>
@@ -123,7 +123,7 @@
         </div>
         <div class="slide-content">
             <div class="slide-num">06</div>
-            <h2>Stewardship & Oversight</h2>
+            <h2>Stewardship</h2>
             <ul>
                 <li>Planned preventive maintenance programme (weekly/monthly/seasonal)</li>
                 <li>Structured technical inspections with photo logs and measured notes</li>
@@ -135,16 +135,21 @@
     </div>
 
     <!-- Slide 8: Back Cover -->
-    <div class="slide cover">
+    <div class="slide cover back-cover">
         <div class="holder">
             <div class="logo">Villa Care Collective</div>
-            <div class="subheading">Start The Conversation</div>
+            <h2 class="back-headline">Secure Your<br>Property's Future</h2>
+            <div class="subheading">The Stewardship Mindset</div>
             <div class="intro-box">
-                <p>Secure your property's future with estate-grade technical care.</p>
+                <p>Reliability. Prevention. Discreet Execution.</p>
                 <div class="divider"></div>
-                <p>Dubrovnik & Wider Adriatic</p>
-                <p class="contact-cta">Contact us to schedule a consultation.</p>
+                <p>It will take patience and rigorous due diligence to maintain these exceptional properties. We will
+                    not be rushed or compromise our standards.</p>
             </div>
+            <a href="https://villacarecollective.com/#contact" class="cta-button" target="_top" rel="noopener">Request
+                a
+                Consultation</a>
+            <a href="mailto:info@villacarecollective.com" class="back-email">info@villacarecollective.com</a>
         </div>
     </div>
 
