--- a/index-hr.html
+++ b/index-hr.html
@@ -264,6 +264,16 @@
                                 <input type="text" name="location" placeholder="lokacija vile">
                             </span>
                             <span class="input-item">
+                                <input type="tel" name="phone" placeholder="broj telefona">
+                            </span>
+                            <span class="input-item">
+                                <select name="pool" title="Imate li bazen?">
+                                    <option value="" disabled selected>bazen?</option>
+                                    <option value="Da">Da</option>
+                                    <option value="Ne">Ne</option>
+                                </select>
+                            </span>
+                            <span class="input-item">
                                 <input type="text" name="message" placeholder="poruka">
                             </span>
                         </div>
