--- a/index.html
+++ b/index.html
@@ -257,6 +257,16 @@
                                 <input type="text" name="location" placeholder="villa location">
                             </span>
                             <span class="input-item">
+                                <input type="tel" name="phone" placeholder="phone number">
+                            </span>
+                            <span class="input-item">
+                                <select name="pool" title="Do you have a pool?">
+                                    <option value="" disabled selected>pool?</option>
+                                    <option value="Yes">Yes</option>
+                                    <option value="No">No</option>
+                                </select>
+                            </span>
+                            <span class="input-item">
                                 <input type="text" name="message" placeholder="message">
                             </span>
                         </div>
